# Mabaan-nlp

./: .gitignore  README.md  pyproject.toml
data/raw/: sample_igt.txt  sample_lexicon.csv  sample_words.txt
scripts/: process_corpus.py
src/mabaan/: __init__.py  cli.py  config.py  recipe.py
src/mabaan/bible/: parser.py  store.py
src/mabaan/corpus/: store.py
src/mabaan/labelling/: queue.py  worker.py
src/mabaan/llm/: analyze.py  client.py
src/mabaan/pipeline/: ingest.py  process.py
src/mabaan/web/: app.py
src/mabaan/web/templates/: base.html  dashboard.html  login.html  queue.html  review.html
tests/: test_pipeline.py
